sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Satisfaction_with_FL_as_a_company__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_FL_as_a_company__c</fullName>
    <description>Used for customer satisfaction survey</description>
    <label>Satisfaction with FL as a company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>