sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Satisfied_with_FL_Marketing_Team__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_with_FL_Marketing_Team__c</fullName>
    <description>Used for customer satisfaction survey</description>
    <label>Satisfied with FL Marketing Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>