sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Sawdust_There__c.field-meta.xml
<CustomField>
    <fullName>Sawdust_There__c</fullName>
    <label>Sawdust There?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>