sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Sight_Check_Open_and_Close_door__c.field-meta.xml
<CustomField>
    <fullName>Sight_Check_Open_and_Close_door__c</fullName>
    <label>Sight Check-Open and Close door</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>