sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Site_was_positioned_as_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Site_was_positioned_as_Authorized__c</fullName>
    <label>Site was positioned as Authorized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>