sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Size_of_biggest_space_near_toilet_sq_m__c.field-meta.xml
<CustomField>
    <fullName>Size_of_biggest_space_near_toilet_sq_m__c</fullName>
    <label>Size of biggest space near toilet (sq m)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>