sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Smell_in_Toilet__c.field-meta.xml
<CustomField>
    <fullName>Smell_in_Toilet__c</fullName>
    <description>Mystery Loo</description>
    <label>Toilet smell-free?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>