sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Soap_available_for_handwashing__c.field-meta.xml
<CustomField>
    <fullName>Soap_available_for_handwashing__c</fullName>
    <label>Soap available for handwashing?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>