sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Report start date</description>
    <inlineHelpText>Please enter the start date for this report</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>