sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Target_Commuters__c.field-meta.xml
<CustomField>
    <fullName>Target_Commuters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commuters</label>
    <type>Checkbox</type>
</CustomField>