sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Target_Nearby_businesses__c.field-meta.xml
<CustomField>
    <fullName>Target_Nearby_businesses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nearby businesses</label>
    <type>Checkbox</type>
</CustomField>