sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Target_Other__c.field-meta.xml
<CustomField>
    <fullName>Target_Other__c</fullName>
    <label>Other Customer Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>