sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Target_Residents__c.field-meta.xml
<CustomField>
    <fullName>Target_Residents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residents</label>
    <type>Checkbox</type>
</CustomField>