sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Target_Tenants__c.field-meta.xml
<CustomField>
    <fullName>Target_Tenants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenants</label>
    <type>Checkbox</type>
</CustomField>