sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Tissue_Paper_There__c.field-meta.xml
<CustomField>
    <fullName>Tissue_Paper_There__c</fullName>
    <inlineHelpText>0=No 1=Yes</inlineHelpText>
    <label>Tissue Paper There?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>