sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Toilet_Name__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toilet Name</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Field Reports</relationshipLabel>
    <relationshipName>Field_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>