sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Toilets_within_50m__c.field-meta.xml
<CustomField>
    <fullName>Toilets_within_50m__c</fullName>
    <label>Number of toilets within 50m</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>