sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Total_Customers__c.field-meta.xml
<CustomField>
    <fullName>Total_Customers__c</fullName>
    <description>Total number of customers for the report period</description>
    <formula>Customers_Boys__c + Customers_Girls__c + Customers_Men__c + Customers_Women__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>