sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <formula>Expenses_Soap__c + Expenses_Water__c + Expenses_Tissue__c + Expenses_Sawdust__c + Expenses_Wages__c + Expenses_Other_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total expenses for the reporting period</inlineHelpText>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>