sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit__c</fullName>
    <formula>Total_Revenue__c - Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total profit for the reporting period</inlineHelpText>
    <label>Total Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>