sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>This field is populated by the formula IF(OR(Usage_Fees_Single__c&gt;0, Usage_Fees_Members__c &gt;0), (Usage_Fees_Members__c + Usage_Fees_Single__c), Calculated_Single_Usage_Fees__c ) via workflow rule.</description>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>