sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Transport_received_delivery_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Transport_received_delivery_confirmation__c</fullName>
    <label>Transport received delivery confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>