sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Transport_team_returned_all_forms_to_WH__c.field-meta.xml
<CustomField>
    <fullName>Transport_team_returned_all_forms_to_WH__c</fullName>
    <label>Transport team returned all forms to WH</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>