sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Trash_within_2M_of_toilet__c.field-meta.xml
<CustomField>
    <fullName>Trash_within_2M_of_toilet__c</fullName>
    <label>2M radius free of trash?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>