sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Type_of_business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_business__c</fullName>
    <inlineHelpText>What type of other businesses does the franchisee run?</inlineHelpText>
    <label>Type of business</label>
    <type>TextArea</type>
</CustomField>