sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Unresolved_issues_next_steps_timeline__c.field-meta.xml
<CustomField>
    <fullName>Unresolved_issues_next_steps_timeline__c</fullName>
    <inlineHelpText>For issues not addressed, please enter the way forward and timeline communicated to FLO</inlineHelpText>
    <label>Unresolved issues - next steps/timeline</label>
    <type>TextArea</type>
</CustomField>