sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Usage_Fees_Members__c.field-meta.xml
<CustomField>
    <fullName>Usage_Fees_Members__c</fullName>
    <inlineHelpText>Please enter the total usage fees collected from members for the reporting period</inlineHelpText>
    <label>Usage Fees - Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>