sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Usage_Fees_Single__c.field-meta.xml
<CustomField>
    <fullName>Usage_Fees_Single__c</fullName>
    <inlineHelpText>Please enter the total single user fees collected for the reporting period</inlineHelpText>
    <label>Usage Fees - Single</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>