sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Use_of_FLT_properly_explained__c.field-meta.xml
<CustomField>
    <fullName>Use_of_FLT_properly_explained__c</fullName>
    <label>Use of FLT properly explained?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>