sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>In-Person Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>