sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/walls_corners_form_straight_lines__c.field-meta.xml
<CustomField>
    <fullName>walls_corners_form_straight_lines__c</fullName>
    <label>walls &amp; corners form straight lines</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>