sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Warehouse_confirmed_parts_for_gate_pass__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_confirmed_parts_for_gate_pass__c</fullName>
    <label>Warehouse confirmed parts for gate pass</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>