sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Was_customer_thanked_and_encouraged__c.field-meta.xml
<CustomField>
    <fullName>Was_customer_thanked_and_encouraged__c</fullName>
    <inlineHelpText>0=No 1=Yes</inlineHelpText>
    <label>Was customer thanked and encouraged?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>