sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Was_squat_plate_clean__c.field-meta.xml
<CustomField>
    <fullName>Was_squat_plate_clean__c</fullName>
    <label>Was squat plate clean?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>