sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Was_the_operator_wearing_dustcoat__c.field-meta.xml
<CustomField>
    <fullName>Was_the_operator_wearing_dustcoat__c</fullName>
    <label>Was the operator wearing dustcoat?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>