sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Water_for_Washing_Hands__c.field-meta.xml
<CustomField>
    <fullName>Water_for_Washing_Hands__c</fullName>
    <description>Mystery Loo</description>
    <label>Water for Washing Hands?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>