sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Water_in_the_Chamber__c.field-meta.xml
<CustomField>
    <fullName>Water_in_the_Chamber__c</fullName>
    <label>Water in the Chamber?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Data Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>