sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Weekly_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Coaching__c</fullName>
    <description>What was the FLO Coashed on?</description>
    <inlineHelpText>What was the FLO Coashed on?</inlineHelpText>
    <label>Weekly Coaching</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improve Cleanliness</fullName>
            </value>
            <value>
                <fullName>Reduce Expenses</fullName>
            </value>
            <value>
                <fullName>Increase Usage</fullName>
            </value>
            <value>
                <fullName>Increase Profits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>