sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Where_does_Franchisee_usually_reside__c.field-meta.xml
<CustomField>
    <fullName>Where_does_Franchisee_usually_reside__c</fullName>
    <label>Where does Franchisee usually reside?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In community</fullName>
            </value>
            <value>
                <fullName>Upcountry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>