sfSandBoxCode/force-app/main/default/objects/Field_Report__c/fields/Who_is_responsible_for_cleaning__c.field-meta.xml
<CustomField>
    <fullName>Who_is_responsible_for_cleaning__c</fullName>
    <description>Mystery Loo- Schools</description>
    <label>Who is responsible for cleaning?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caretaker</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Pupils</fullName>
            </value>
            <value>
                <fullName>Any User</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>