sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Customer_Satisfaction_Survey.recordType-meta.xml
<RecordType>
    <fullName>Customer_Satisfaction_Survey</fullName>
    <active>true</active>
    <description>Customer Satisfaction Survey</description>
    <label>Customer Satisfaction Survey</label>
</RecordType>