sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/FLO_Involvement_Score_Rating.recordType-meta.xml
<RecordType>
    <fullName>FLO_Involvement_Score_Rating</fullName>
    <active>true</active>
    <description>FLO Involvement Score Rating</description>
    <label>FLO Involvement Score Rating</label>
</RecordType>