sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Land_Availability_Survey.recordType-meta.xml
<RecordType>
    <fullName>Land_Availability_Survey</fullName>
    <active>true</active>
    <description>Land Availability Survey</description>
    <label>Land Availability Survey</label>
</RecordType>