sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Marketing_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Assessment</fullName>
    <active>true</active>
    <label>Marketing Assessment</label>
</RecordType>