sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Marketing_Assessment_v2.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Assessment_v2</fullName>
    <active>true</active>
    <label>Marketing Assessment v2</label>
</RecordType>