sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Monthly.recordType-meta.xml
<RecordType>
    <fullName>Monthly</fullName>
    <active>true</active>
    <description>Monthly report usually filed by Field Manager</description>
    <label>Monthly</label>
</RecordType>