sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Mystery_Loo_Reports.recordType-meta.xml
<RecordType>
    <fullName>Mystery_Loo_Reports</fullName>
    <active>true</active>
    <description>3rd Party Survey of FLT&#39;s Quality Standards</description>
    <label>Mystery Loo Reports</label>
</RecordType>