sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Mystery_Loo_Schools.recordType-meta.xml
<RecordType>
    <fullName>Mystery_Loo_Schools</fullName>
    <active>true</active>
    <description>Mystery Loo Report for Schools</description>
    <label>Mystery Loo- Schools</label>
</RecordType>