sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/QHSE_External_Checks.recordType-meta.xml
<RecordType>
    <fullName>QHSE_External_Checks</fullName>
    <active>true</active>
    <description>Used for quality of installations check</description>
    <label>QHSE External Checks</label>
</RecordType>