sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Toilet_Quality_Report.recordType-meta.xml
<RecordType>
    <fullName>Toilet_Quality_Report</fullName>
    <active>true</active>
    <description>Report of toilet quality standards filled by waste collectors</description>
    <label>Toilet Quality Report</label>
</RecordType>