sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Usage_Tally.recordType-meta.xml
<RecordType>
    <fullName>Usage_Tally</fullName>
    <active>true</active>
    <description>User count done by Sanergy enumerators</description>
    <label>Usage Tally</label>
</RecordType>