sfSandBoxCode/force-app/main/default/objects/Field_Report__c/recordTypes/Weekly.recordType-meta.xml
<RecordType>
    <fullName>Weekly</fullName>
    <active>true</active>
    <description>Weekly Report usually filed by Field Officer</description>
    <label>Weekly</label>
</RecordType>